--- a/HOME.css
+++ b/HOME.css
@@ -97,6 +97,8 @@
   width: 100%;
   margin-bottom: 15px;
   border-radius: 5px;
+  background: transparent;
+  font-family: 'Quicksand', 'Prompt', sans-serif;
 }
 
 .button {
@@ -120,7 +122,7 @@
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Quicksand', 'Prompt', sans-serif;
 }
 
 .textitem {
